tests/ui/generic-associated-types/bugs/hrtb-implied-3.stderr
error[E0521]: borrowed data escapes outside of function
  --> $DIR/hrtb-implied-3.rs:19:5
   |
LL | fn fails(iter: &str) {
   |          ----  - let's call the lifetime of this reference `'1`
   |          |
   |          `iter` is a reference that is only valid in the function body
LL |     trivial_bound(iter);
   |     ^^^^^^^^^^^^^^^^^^^
   |     |
   |     `iter` escapes the function body here
   |     argument requires that `'1` must outlive `'static`
   |
note: due to current limitations in the borrow checker, this implies a `'static` lifetime
  --> $DIR/hrtb-implied-3.rs:14:26
   |
LL |     for<'a> I::Item<'a>: Sized,
   |                          ^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0521`.
